# dict-cc-lookup

./: Cargo.toml
src/: lexer.rs  lib.rs  main.rs  query.rs  util.rs
src/entry/: annotation.rs  gender.rs  mod.rs  part.rs  placeholder.rs  term.rs
