[package]
name = "dict-cc-lookup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3

[dependencies]
anyhow = "1.0.71"
colored = "2.0.4"
csv = "1.2.2"
zstd = { version = "0.13.0", default-features = false }
