[package]
name = "dict-cc-lookup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
strip = true
lto = true
panic = "abort"

[dependencies]
anyhow = "1.0.71"
thiserror = "1.0.50"
zstd = { version = "0.13.0", default-features = false }
